# deep_risk_model

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  PROGRESS.md  README.md
docs/: BENCHMARKS.md  COMPARISON.md  LINKEDIN_POST.md  THEORY.md  USE_CASES.md  mcp_integration.md
examples/: api_examples.md  api_integration_example.rs  mcp_example.rs
src/: benchmarks.rs  config.rs  error.rs  gat.rs  gru.rs  lambda.rs  lib.rs  main.rs  mcp_client.rs  model.rs  risk_model.rs  types.rs  utils.rs
tests/: TESTING.md  e2e_tests.rs  integration_tests.rs  mod.rs  test_utils.rs
